Lobo / Xiz: * Bug fix at mouse actions menu CSS; * Bug fix at release widget collapse button (hidden when is empty and a scope is added); * Dropdown when @ pressed in ScopeTree;
git-svn-id: http://192.168.2.95/svn/repos/trunk@424 014e18b7-1377-44f3-b398-c31593b6cf9d

--- a/ontrack/war/resources/style/Application.css
+++ b/ontrack/war/resources/style/Application.css
@@ -14,6 +14,10 @@ html,body {
 	font-size: 14px;
 }
 
+.gwt-Tree table {
+	border-spacing: 2px;
+}
+
 .gwt-Tree .gwt-TreeItem {
 	height: 20px;
 	border: 1px solid transparent;
@@ -36,7 +40,16 @@ html,body {
 <!-- MenuBar -->
 .gwt-MenuBar {}
 .gwt-MenuBar-horizontal {}
-.gwt-MenuBar-vertical {}
+
+.gwt-MenuBar-vertical {
+	color: black;
+	background: white;
+	border: 1px solid gray;
+	
+	box-shadow: 1px 1px 6px #d9dae1;
+	-moz-box-shadow: 1px 1px 6px #d9dae1;
+	-webkit-box-shadow: 1px 1px 6px #d9dae1;
+}
 
 .gwt-MenuBar-vertical > table {
 	width: 100%;
